# PyEMMA

./: .travis.yml  CMakeLists.txt  appveyor.yml  circle.yml  setup.py
devtools/conda-recipe/: build.sh  meta.yaml  run_test.py
doc/source/: conf.py  refs.bib
pyemma/: pyemma.cfg
pyemma/_base/: estimator.py  fixed_seed.py  model.py
pyemma/_ext/sklearn/: base.py
pyemma/_ext/variational/: running_moments.py
pyemma/coordinates/: __init__.py  api.py
pyemma/coordinates/clustering/: CMakeLists.txt  __init__.py  interface.py  kmeans.py
pyemma/coordinates/clustering/include/: clustering.h  kmeans.h  link_rmsd_unix.h  link_rmsd_win.h
pyemma/coordinates/clustering/include/bits/: kmeans_bits.h  kmeans_pp_kmc.h
pyemma/coordinates/clustering/src/: clustering.c  clustering_module.cpp  kmeans.c  minRMSD.c  regspatial.c
pyemma/coordinates/data/: cache.py  data_in_memory.py  feature_reader.py  py_csv_reader.py  sources_merger.py
pyemma/coordinates/estimation/: covariance.py
pyemma/coordinates/tests/: test_assign.py  test_cache.py  test_covar_estimator.py  test_datainmemory.py  test_sources_merger.py  test_stride.py  test_traj_info_cache.py
pyemma/coordinates/transform/: tica.py
pyemma/coordinates/util/: patches.py
pyemma/msm/: api.py
pyemma/msm/estimators/: _dtraj_stats.py  bayesian_msm.py  implied_timescales.py  lagged_model_validators.py  maximum_likelihood_hmsm.py  maximum_likelihood_msm.py
pyemma/msm/models/: hmsm.py  msm.py
pyemma/util/: config.py  discrete_trajectories.py  metrics.py  numeric.py  reflection.py  types.py
(+12 files in other folders)
